crates/solidity/testing/snapshots/bindings_output/using/global/v2/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
   ╭─[counter.sol:1:1]
   │
 1 │ ╭─▶ struct Counter {
   ┆ ┆   
 8 │ ├─▶ 
   │ │      
   │ ╰────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (4):
- Def: #1 ["Counter" @ main.sol:1:9] (imported symbol)
- Def: #2 ["Test" @ main.sol:3:10] (contract)
- Def: #3 ["test" @ main.sol:4:14] (function, type: unresolved)
- Def: #4 ["c" @ main.sol:4:34] (parameter, type: unresolved)

------------------------------------------------------------------------

References (4):
- Ref: ["Counter" @ main.sol:1:9] -> unresolved
- Ref: ["Counter" @ main.sol:4:19] -> #1
- Ref: ["c" @ main.sol:5:9] -> #4
- Ref: ["increment" @ main.sol:5:11] -> unresolved

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 

------------------------------------------------------------------------

Bindings: 
   ╭─[main.sol:1:1]
   │
 1 │ import {Counter} from "counter.sol";
   │         ───┬───  
   │            ╰───── name: 1
   │            │     
   │            ╰───── unresolved
   │ 
 3 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 2
 4 │     function test(Counter memory c) public {
   │              ──┬─ ───┬───        ┬  
   │                ╰──────────────────── name: 3
   │                      │           │  
   │                      ╰────────────── ref: 1
   │                                  │  
   │                                  ╰── name: 4
 5 │         c.increment();
   │         ┬ ────┬────  
   │         ╰──────────── ref: 4
   │               │      
   │               ╰────── unresolved
───╯
